<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blur1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvColleges"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/back1"
            android:gravity="center_vertical|fill_vertical|center_horizontal"
            android:text="@string/colleges_of_du"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/white"
            android:textStyle="bold|italic" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/hrc_logo"

            android:drawableLeft="@drawable/hrc_logo"

            android:text="@string/hansraj_college"
            android:textAppearance="@style/Animation.AppCompat.Dialog"
            android:textSize="18sp"
            android:textStyle="bold|italic" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/hrcScrollView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:scrollbars="none"
                android:visibility="visible">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/blur5"

                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/hrc" />

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="20dp"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/hrc1" />

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="20dp"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/hrc2" />

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="20dp"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/hrc3" />

                    <ImageView
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="20dp"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/hrc4" />


                </LinearLayout>
            </HorizontalScrollView>


            <LinearLayout
                android:id="@+id/hrcLayout"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/hrcScrollView"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="85dp"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/hrcText" />

                    <Button
                        android:id="@+id/hrcmore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="70dp"
                        android:background="@android:color/transparent"
                        android:text="@string/read_more"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="7sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hrcmoreLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/hrcWeb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:drawableStart="@drawable/web"
                        android:drawableLeft="@drawable/web"
                        android:linksClickable="true"
                        android:text="@string/web"
                        android:textColor="@color/colorPrimaryDark"
                        android:visibility="visible" />


                    <TextView
                        android:id="@+id/hrcCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:clickable="true"
                        android:drawableStart="@drawable/call"
                        android:drawableLeft="@drawable/call"
                        android:focusable="true"
                        android:text="@string/_11_27667747"
                        android:textColor="@color/colorAccent" />


                    <TextView
                        android:id="@+id/hrcLocate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="map"
                        android:drawableStart="@drawable/locate"
                        android:drawableLeft="@drawable/locate"
                        android:linksClickable="true"
                        android:text="@string/mahatma_hansraj_marg_new_delhi_delhi_n_t110007"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/facilities"
                        android:textAppearance="@style/Animation.Design.BottomSheetDialog"
                        android:textSize="18sp" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableTop="@drawable/library"
                                android:gravity="center"
                                android:text="@string/library" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="13dp"
                                android:layout_marginLeft="13dp"
                                android:drawableTop="@drawable/audi"
                                android:gravity="center"
                                android:text="@string/auditorium" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:drawableTop="@drawable/labs"
                                android:gravity="center"
                                android:text="@string/labs" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginLeft="15dp"
                                android:drawableTop="@drawable/sports"
                                android:gravity="center"
                                android:text="@string/sports" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginLeft="15dp"
                                android:drawableTop="@drawable/cafe"
                                android:gravity="center"
                                android:text="@string/cafeteria" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:drawableTop="@drawable/hostel"
                                android:gravity="center"
                                android:text="@string/hostel" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:drawableTop="@drawable/medical"
                                android:gravity="center"
                                android:text="@string/medical" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:drawableTop="@drawable/gym"
                                android:gravity="center"
                                android:text="@string/gym" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:drawableTop="@drawable/wifi"
                                android:gravity="center"
                                android:text="@string/wi_fi" />


                        </LinearLayout>

                    </HorizontalScrollView>
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/hrcivv"
                android:layout_width="41dp"
                android:layout_height="43dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/hrc_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"

                android:layout_marginLeft="5dp"
                android:text="Ramjas College"
                android:textAppearance="@style/Animation.AppCompat.Dialog"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>